<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutHang">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/hangman"
            android:textAlignment="center"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="217dp">

            <Button
                android:id="@+id/ferdigBtn"
                android:layout_width="235dp"
                android:layout_height="82dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="52dp"
                android:text="@string/ferdig" />

            <fragment
                android:id="@+id/fragment"
                android:name="com.example.zaimi.hangman.bodyFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />

            <LinearLayout
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/feilTW"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/totalWords"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/ord_total" />

                    <TextView
                        android:id="@+id/ordTot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ordSpilt"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ord_spilt" />

                    <TextView
                        android:id="@+id/ordSpl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/riktig"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/riktig" />

                    <TextView
                        android:id="@+id/rkt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/feil"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/feil" />

                    <TextView
                        android:id="@+id/fel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/feilTW"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="13dp" />

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="156dp"
                android:layout_height="62dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/next" />

        </RelativeLayout>

        <TextView
            android:id="@+id/ordTW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="33sp" />


        <GridView
            android:id="@+id/gw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:horizontalSpacing="5dp"
            android:numColumns="6"
            android:padding="5dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>